# iracing-pitwall

./: .gitignore  AGENTS.md  IRACING_PITWALL_PROJECT_PLAN.md  LICENSE  README.md  TASK_BRIDGE_IRACING_CONNECT.md  TASK_BRIDGE_IRACING_CONNECT_REVIEW.md  TASK_BRIDGE_IRACING_VAR_INDEX.md  build-release.sh
.cargo/: config.toml
.github/workflows/: ci.yml
bridge/: Cargo.toml  build.rs
bridge/assets/: gen_icon.py  gen_res.py
bridge/src/: config.rs  error.rs  main.rs  paths.rs  update.rs
bridge/src/iracing_api/: auth.rs  client.rs  mod.rs  models.rs  token_store.rs
bridge/src/iracing_sdk/: broadcast.rs  events.rs  header.rs  mod.rs  reader.rs  synthetic_id.rs  types.rs  var_header.rs  yaml.rs
bridge/src/persistence/: mod.rs  queries.rs  schema.rs
bridge/src/race_engineer/: audio.rs  config.rs  mod.rs  mod_types.rs  paths.rs  piper_binary.rs  state.rs  tts_engine.rs  voice_manager.rs
bridge/src/race_engineer/rules/: damage_rules.rs  dispatcher.rs  flag_rules.rs  fuel_rules.rs  mod.rs  pace_rules.rs  pit_rules.rs  position_rules.rs  session_rules.rs  templates.rs  tire_rules.rs  weather_rules.rs
bridge/src/results/: converter.rs  finalizer.rs  lap_buffer.rs  live_capture.rs  mod.rs  retry_queue.rs
bridge/src/telemetry/: finish_tracker.rs  gap_tracker.rs  mod.rs  p2p_tracker.rs  pit_tracker.rs  sdk_debug.rs  sector_tracker.rs  session_transition.rs  snapshot.rs  standings.rs  track_map.rs  track_recorder.rs
bridge/src/ws/: client.rs  handler.rs  lifecycle.rs  mod.rs  protocol.rs
bridge/tests/fixtures/: session_minimal.yaml
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: App.css  App.tsx  format.ts  index.css
dashboard/src/components/: SettingsDrawer.tsx  WindCompass.tsx
dashboard/src/layout/: Dashboard.tsx  EditToolbar.tsx  registry.tsx  storage.ts
dashboard/src/screens/: LapByLapView.tsx  ResultDetail.tsx  Results.tsx  ResultsFilters.tsx  ResultsTable.tsx  useResults.ts
dashboard/src/widgets/: Acceleration.tsx  (+32 more)
(+13 files in other folders)
