[package]
name = "bridge"
version = "0.1.24"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "iracing-pitwall"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
rust-embed = { version = "8", features = ["mime-guess"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
encoding_rs = "0.8"
thiserror = "2"
anyhow = "1"
log = "0.4"
simplelog = "0.12"
ts-rs = { version = "10", features = ["serde-compat"] }
webbrowser = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "cookies"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
urlencoding = "2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
